# survey-medley-code

./: .gitignore  LICENSE  README.md  pyproject.toml
analyses/assess_subject_bold_dropout/: generate_good_subject_list.ipynb  preanalysis_good_subject_list.txt  submit_visualize_masker_on_mean_bold.batch  visualize_masker_on_mean_bold.py
analyses/create_events_modified/: fix_codings.py
analyses/data_exploration/: events_data_explore.ipynb
analyses/f_test_factor_maps/: f_test_factor_maps.ipynb
analyses/f_test_questionnaire_averages/: f_test_questionnaire_averages.ipynb  plot_figures_f_test_questionnaire_avgs.ipynb
analyses/jaemon_files_to_sort/: analyze_lev1.py  analyze_lev2_surveyMedley_group_maps.py  analyze_lev2_surveyMedley_questionnaire_contrasts.py  analyze_surveyMedley_brain_behavior_correlation.py  check_lev1_surveyMedley_output.py  launch_surveyMedley_lev1_sherlock.sh  mantel_test_whole_brain.py  surveyMedley_brain_behavior_similarity_analysis.py
analyses/questionnaire_average_multivariate/: paired_test_pca.ipynb
analyses/questionnaire_average_omnibus_f/: paired_t_test_maps.ipynb  review_results.ipynb  setup_randomise.ipynb  setup_randomise_adjusted.ipynb  submit_randomise.batch  submit_randomise_all_pairs.batch
analyses/questionnaire_brain_behavior_slope_ftest/: run_ftest.ipynb  run_pairwise_comparisons.ipynb  submit_randomise.sh
analyses/sandbox/: jeanette_brain_behavior_within_subject_by_questionnaire.ipynb  junk.ipynb  junk_smoothing_test.ipynb  (+1 more)
analysis_registry/: README.md  build_master_registry.py  master_registry.yaml
(+33 files in other folders)
